# lab3_thedyson_luzon

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  model.py  pyproject.toml  requirements.txt  train.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml
app/: main.py
app/data/: model.json  preprocess_meta.json
tests/: test_app.py
